Modified to handle the signing model. Signing was modifying a file always

--- a/org.osgi.test.cases.permissionadmin.signature/build.properties
+++ b/org.osgi.test.cases.permissionadmin.signature/build.properties
@@ -12,6 +12,6 @@ expand.tb3.jar = [${p}.tb3]
 expand.tbc.jar = [${p}.tbc]
 include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=${target-dir}/tb1.jar, \
-	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb1.jar=${target-dir}/tb1.jar.signed, \
+	www/tb2.jar=${target-dir}/tb2.jar.signed, \
 	www/tb3.jar=${target-dir}/tb3.jar
