--- a/org.osgi.test.cases.application/build.properties
+++ b/org.osgi.test.cases.application/build.properties
@@ -13,7 +13,7 @@ expand.tbc.jar = [${p}.tbc.*]
 include.tb1.jar = OSGI-INF/app/apps.xml=resources/apps.xml, \
 				  TestIcon.gif=resources/TestIcon.gif		  
 include.${p}.jar = ${target-dir}/tbc.jar, \
-	www/tb1.jar=${target-dir}/tb1.jar, \
+	www/tb1.jar=${target-dir}/tb1.jar.signed, \
 	www/tb2.jar=${target-dir}/tb2.jar, \
 	www/tb3.jar=${target-dir}/tb3.jar
 	
