--- a/org.osgi.test.cases.permissionadmin.conditional/build.properties
+++ b/org.osgi.test.cases.permissionadmin.conditional/build.properties
@@ -17,7 +17,7 @@ expand.testcond.jar = [${p}.testcond]
 include.tb2.jar = OSGI-INF/permissions.perm=OSGI-INF/permissions.perm
 include.${p}.jar = ${target-dir}/tbc.jar, \
 	log.ref, \
-	www/tb1.jar=${target-dir}/tb1.jar, \
-	www/tb2.jar=${target-dir}/tb2.jar, \
+	www/tb1.jar=${target-dir}/tb1.jar.signed, \
+	www/tb2.jar=${target-dir}/tb2.jar.signed, \
 	www/tb3.jar=${target-dir}/tb3.jar
 	
