--- a/osgi/build.properties
+++ b/osgi/build.properties
@@ -3,7 +3,7 @@ bin.includes = ${p}.jar, ${p}.cmpn.jar, ${p}.core.jar, ${p}.mobile.jar
 
 expand.${p}.jar = ${replace;${specs};^.*$;[$0.*]}
 include.${p}.jar = about.html, \
-  LICENSE, \s
+  LICENSE, \
   xmlns/metatype=../xmlns/metatype, \
   xmlns/scr=../xmlns/scr, \
   xmlns/app=../xmlns/app
