Rename to remove version from project name

--- a/ee.j2se/.project
+++ b/ee.j2se/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ee.j2se14</name>
+	<name>ee.j2se</name>
 	<comment></comment>
 	<projects>
 	</projects>
