--- a/org.osgi.framework/.classpath
+++ b/org.osgi.framework/.classpath
@@ -2,5 +2,5 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry sourcepath="/cnf/repo/ee.minimum/ee.minimum-1.1.3.jar" kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.1.3.jar"/>
-	<classpathentry kind="output" path="src"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
