Upgrades, moved to bnd

--- a/osgi.released/build.properties
+++ b/osgi.released/build.properties
@@ -1,4 +1,4 @@
-prebuild= ${ees}, osgi, osgi.internal
+-dependson = ${ees}, j2se14, osgi, osgi.internal
 custom = true
 
 japi.osgi.core = ${replace;$(core.specs);.+;+$0}
