--- a/osgi.test/build.properties
+++ b/osgi.test/build.properties
@@ -1,5 +1,6 @@
 nodeploy=true
-prebuild =  osgi, \
+
+-dependson =  osgi, \
   ${impls} , ${tests}, \
   org.osgi.test.cases.testtool, \
   org.osgi.test.tool, \
