--- a/org.osgi.tools/.classpath
+++ b/org.osgi.tools/.classpath
@@ -1,16 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/licensed/repo/org.apache.tools.ant/org.apache.tools.ant-1.6.5.jar"/>
-	<classpathentry kind="lib" path="/cnf/repo/org.osgi.internal/org.osgi.internal-4.1.0.jar" sourcepath="/cnf/repo/org.osgi.internal/org.osgi.internal-4.1.0.jar"/>
-	<classpathentry kind="lib" path="/licensed/repo/com.icl.saxon/com.icl.saxon-6.5.1.jar"/>
-	<classpathentry kind="lib" path="jar/tools.jar"/>
-	<classpathentry kind="lib" path="/cnf/repo/osgi/osgi-4.0.0.jar" sourcepath="/cnf/repo/osgi/osgi-4.0.0.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.test.tool"/>
-	<classpathentry kind="lib" path="/licensed/repo/org.apache.bcel/org.apache.bcel-1.0.0.jar"/>
-	<classpathentry kind="lib" path="/licensed/repo/com.springsource.junit/com.springsource.junit-3.8.2.jar"/>
-	<classpathentry kind="lib" path="/licensed/repo/nanoxml/nanoxml-1.0.0.jar"/>
-	<classpathentry kind="lib" path="/licensed/repo/org.objectweb.asm/org.objectweb.asm-2.2.2.jar"/>
-	<classpathentry kind="output" path="src"/>
+	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
