Still some 1.4 remains in build.properties

--- a/ee.j2se/build.properties
+++ b/ee.j2se/build.properties
@@ -1,5 +1,5 @@
-bin.includes = ee.j2se14.jar
-jars.compile.order = ee.j2se14.jar
-expand.ee.j2se14.jar = java.*, javax.*, org.*
-include.ee.j2se14.jar = about.html, LICENSE
+bin.includes = ee.j2se.jar
+jars.compile.order = ee.j2se.jar
+expand.ee.j2se.jar = java.*, javax.*, org.*
+include.ee.j2se.jar = about.html, LICENSE
 btool.sources=true
