--- a/org.osgi.service.cm/.classpath
+++ b/org.osgi.service.cm/.classpath
@@ -4,5 +4,5 @@
 	<classpathentry sourcepath="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar" kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.0.0.jar"/>
 	<classpathentry kind="src" path="/org.osgi.framework"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/org.osgi.service.condpermadmin"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry kind="output" path="src"/>
 </classpath>
