--- a/org.osgi.service.event/.classpath
+++ b/org.osgi.service.event/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="/org.osgi.framework"/>
-	<classpathentry sourcepath="/cnf/repo/ee.minimum/ee.minimum-1.1.3.jar" kind="lib" path="/cnf/repo/ee.minimum/ee.minimum-1.1.3.jar"/>
+	<classpathentry kind="con" path="aQute.bnd.classpath.container"/>
 	<classpathentry kind="output" path="src"/>
 </classpath>
