--- a/osgi.released/build.xml
+++ b/osgi.released/build.xml
@@ -20,14 +20,14 @@
 			<classpath path="${workspace}/licensed/japitools/share/java/japitools.jar" />
 			<arg value="unzip" />
 			<arg value="as" />
-			<arg value="${target}/osgi.cpmn-latest.japi" />
+			<arg value="${target}/osgi.core-latest.japi" />
 			<arg value="packages" />
 			<arg value="${target}/ee.foundation.jar" />
 			<arg value="${target}/osgi.core.jar" />
-			<arg value="${target}/osgi.cpmn.jar" />
+			<arg value="${target}/osgi.cmpn.jar" />
 			<arg value="${licensed-repo}/org.osgi.impl.bundle.servlet/org.osgi.impl.bundle.servlet-2.1.0.jar" />
 			<arg value="${licensed-repo}/com.icl.saxon/com.icl.saxon-6.5.1.jar" />
-			<arg line="${japi.osgi.cpmn}" />
+			<arg line="${japi.osgi.cmpn}" />
 		</java>
 		<echo>osgi.mobile</echo>
 		<java classname="net.wuffies.japi.Japize">
